# Uniware-automations

./: .dockerignore  .gitignore  Dockerfile  README.md  debug.py  digest.txt  pyproject.toml
app/: main.py
app/routers/: inventory.py  po.py  sale_orders.py  sales_order.py
app/services/: auth.py  inventory.py  po.py  sale_orders.py  sales_order.py  sheets.py
